change to Stream.toList()